# spym

./: .gitignore  README.md  pyproject.toml
src/: spym.py
tests/: datagen.py
tests/data/: FlameTotalCalibration.txt
